# auto-rust

./: .env  .env.example  .gitignore  AGENTS.md  API_DESIGN_PLAN.md  CHANGELOG.md  Cargo.toml  FOLDER_STRUCTURE.md  JOURNAL.md  LICENSING_PLAN.md  LLM_SETUP.md  Nextest.toml  PATCHNOTES.md  PERFORMANCE_OPTIMIZATIONS.md  PROPOSAL_ACCESSIBILITY_LOCATOR.md  QWEN.md  README.md  RELEASE_NOTES_v0.0.3.md  RELEASE_NOTES_v0.1.0.md  SECTION_71_DEVELOPMENT_PLAN.md  SPECS_SYSTEM_IMPROVEMENT_PLAN.md  TASK.md  TASK_DURATION_STANDARDIZATION_PLAN.md  TASK_POLICY_IMPLEMENTATION_STATUS.md  TASK_POLICY_PROPOSAL.md  TASK_RUNNER_PROPOSAL.md  TESTS_RESTRUCTURING.md  TEST_COVERAGE_REPORT.md  TEST_PLAN_REMAINING_AREAS.md  TEST_PLAN_RUNTIME_LLM.md  TEST_SUMMARY. md  TEST_SUMMARY.md  TODO.md  TODO_twitteractivity.md  TWITTERACTIVITY_TODO.md  V2_ROADMAP.md  agents-journal.md  api-audit.md  benchmark-builds.ps1  build.rs  (+26 more)
.cargo/: config.toml  config.toml.example
.config/: nextest.toml
.github/workflows/: ci.yml
.migration-steps/: README-master-index.md  phase-1-project-setup.md  phase-2-core-orchestrator.md  phase-3-utils-library.md  phase-4-task-migration.md  phase-5-testing-validation.md  phase-6-polish-deployment.md
.migration-steps/agent-specs/: 00-shared-contract.md  agent-1-cli-parser.md  agent-2-browser-session.md  agent-3-orchestrator-execution.md  agent-4-utils-and-tasks.md  agent-5-testing-and-quality.md  agent-6-release-and-ops.md  spec-readme.md
.nodejs reference codebase/: .AGENT.README.md  .editorconfig  .env.backup  .env.example  .gitattributes  .gitignore  .npmrc  .pnpmrc  .pnpmrc.json  .prettierignore  AGENTS.md  API-CHEATSHEET.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  LICENSE  LIVE_TEST_CHECKLIST.md  MCP-TOOLS-TEST-REPORT.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  TEST-PLAN.md  agent-main.js  analyze-coverage.js  jsconfig.json  main.js  owb-config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-output.txt  test-tavily.cjs  vitest-improvement.md
.nodejs reference codebase/.github/: PULL_REQUEST_TEMPLATE.md
.nodejs reference codebase/api/: index.d.ts  index.js
.nodejs reference codebase/config/: browserAPI.json  eslint.config.js  gameMenus.json  popularsite.txt  referrer_dict.json  settings-methods-example.json  settings.json.example  tco_links.json  timeouts.json  ved_data.json  vitest.config.isolated.js  vitest.config.js  vitest.config.optimized.js  vitest.smoke.config.js
.nodejs reference codebase/data/: fingerprints.json
.nodejs reference codebase/docs/: CASE-STUDIES.md  CIRCUIT-BREAKER.md  CONFIGURATION-GUIDE.md  CONTRIBUTING-CHECKLIST.md  DASHBOARD-GUIDE.md  DEPRECATION.md  ERROR-HANDLING.md  HEALTH-MONITORING.md  OPTIMIZATION.md  PERFORMANCE.md  RECIPES.md  RELIABILITY.md  USER-GUIDE.md  VERSIONING.md  api.md  architecture-diagrams.md  architecture.md  configuration.md  development.md  getting-started.md  improvement-plan.md  index.md  scripts-consolidation-plan.md  setup-api-plan.md  tasks.md  troubleshooting.md
.nodejs reference codebase/prompts/: TUNING-GUIDE.md  index.js
.nodejs reference codebase/scripts/: .script-overview  README.md  benchmark-compare.js  benchmark.js  convert-imports-to-aliases.js  coverage-perfile.cjs  generate-coverage-badge.js  git-amend.js  git-commit.js  ixbrowser-change-fingerprint-config-kabeh-old.js  ixbrowser-change-fingerprint-config.js  ixbrowser-change-resolution-kabeh.js  ixbrowser-change-resolution.js  ixbrowser-change-ua.js  ixbrowser-proxies-pasang-tok.js  quality-gate.js  release.js  remove-logger-mocks.cjs  remove-math-mocks.cjs  setup.js
.nodejs reference codebase/tasks/: .exampletask.js  .task-example.md  .tasksREADME.md  agent.js  ai-twitterActivity.md  api-twitterActivity.js  api-twitterFollowLikeRetweet.js  cookiebot.js  coverage_valid_task.js  follow-test.js  followback.js  owb.js  pageview.js  pageview.txt  quote-test.js  (+15 more)
.obsidian/: workspace.json
benches/: accessibility_locator.rs  predictive_scorer.rs  trajectory.rs
config/: auto.cmd  default.toml  llm.toml
data/: referrer.txt
docs/: ACCESSIBILITY_LOCATOR_SPEC.md  API_REFERENCE.md  API_USAGE_GUIDE.md  ARCHITECTURE.md  CONTRIBUTING.md  DECISION_LOG.md  DEPENDENCY_AUDIT.md  IMPLEMENTATION_PLANS.md  LICENSING_PLAN.md  MIGRATING_TO_NEXTEST.md  ONBOARDING.md  PERFORMANCE.md  PROPOSAL_ACCESSIBILITY_LOCATOR.md  RELEASE_NOTES_v0.0.6.md  RELEASE_NOTES_v0.1.1.md  SUMMARY.md  TASK_ACCESSIBILITY_LOCATOR_MIGRATION.md  TASK_AUTHORING_GUIDE.md  TASK_POLICY_IMPLEMENTED.md  TASK_RUNNER_DSL_BUILD.md  TASK_RUNNER_PREPARATION.md  TEST_SUMMARY.md  TUTORIAL_BUILDING_FIRST_TASK.md  TUTORIAL_GETTING_STARTED.md  VALIDATION_GUIDE.md  api-audit.md  dependency_duplicates.txt  dependency_tree_full.txt
examples/: task_template.rs
plan/: PHASE_3_4_IMPLEMENTATION_PLAN.md  REFACTOR_TO_RUST_API.md  SENTIMENT_ANALYSIS_COMPLETION_REPORT.md  SENTIMENT_ANALYSIS_EXPANSION.md  TWITTERACTIVITY_REFACTORING_PLAN.md  URL_VERIFICATION_INTEGRATION_PLAN.md  twitteractivity-checklist.md
src/: browser.rs  cli.rs  config.rs  error.rs  health_logger.rs  health_monitor.rs  lib.rs  logger.rs  main.rs  metrics.rs  orchestrator.rs  page_manager.rs  result.rs  session.rs  tracing.rs  worker_pool.rs
task/: cookiebot.rs  demo-interaction-keyboard.rs  demo-interaction-mouse.rs  demo_keyboard.rs  demo_mouse.rs  demoqa.rs  mod.rs  pageview.rs  task_example.rs  twitteractivity.rs  twitterdive.rs  twitterfollow.rs  twitterfollow_GAP_ANALYSIS.md  twitterlike.rs  twitterquote.rs  twitterreply.rs  twitterretweet.rs  twittertest.rs
tests/: api_client_integration.rs  api_mock_integration.rs  browser_port_config_test.rs  chaos_failure_classification.rs  cli_parsing_tests.rs  cookiebot_integration.rs  dsl_integration_tests.rs  dsl_translation_tests.rs  graceful_shutdown_integration.rs  launcher_tests.rs  navigation_integration.rs  orchestrator_integration.rs  run_async_smoke.rs  session_management_tests.rs  soak_test.rs  task_api_behavior.rs  task_composition_integration.rs  task_context_integration.rs  task_registration_tests.rs  twitteractivity_integration.rs
(+1226 files in other folders)
