[package]
name = "rust-orchestrator"
version = "0.1.0"
edition = "2021"
autobins = false
authors = ["Auto-Rust Team"]
description = "High-performance multi-browser automation framework built in Rust"
license = "MIT"
repository = "https://github.com/your-org/rust-orchestrator"
keywords = ["automation", "browser", "orchestration", "testing"]
categories = ["development-tools", "web-programming"]

[[bin]]
name = "auto"
path = "src/main.rs"

[dependencies]
# CDP Browser Automation
chromiumoxide = { version = "0.6", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# CLI Parsing
clap = { version = "4", features = ["derive"] }

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP & Networking
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
url = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "chrono"] }

# OpenTelemetry Tracing
opentelemetry = "0.23"
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16", features = ["grpc-tonic", "http-proto", "reqwest-client"] }
opentelemetry-semantic-conventions = "0.16"
tracing-opentelemetry = "0.24"

# Error Handling
anyhow = "1"
thiserror = "1"

# Async Utilities
futures = "0.3"
async-trait = "0.1"
enigo = "0.6.1"

# Random & Probability
rand = "0.8"
rand_distr = "0.4"

# File & Path Utilities
tokio-stream = "0.1"
glob = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }
humantime = "2"

# Concurrency
parking_lot = "0.12"
dashmap = "5"
sysinfo = "0.30"

# Regex
regex = "1"

# Lazy Static / Once Cell
once_cell = "1"
lazy_static = "1.4"
log = "0.4.29"
do-over = "0.1.0"

[dev-dependencies]
env_logger = "0.11"

[[example]]
name = "demo-interaction-keyboard"
path = "src/task/demo-interaction-keyboard.rs"

[[example]]
name = "demo-interaction-mouse"
path = "src/task/demo-interaction-mouse.rs"
