[package]
name = "auto"
version = "0.0.3"
edition = "2021"
autobins = false
authors = ["Ganteng Maksimal"]
description = "High-performance multi-browser automation framework built in Rust"
license = "MIT"
repository = "https://github.com/your-org/rust-orchestrator"
keywords = ["automation", "browser", "orchestration", "testing"]
categories = ["development-tools", "web-programming"]

[features]
default = []
accessibility-locator = []

[[bin]]
name = "auto"
path = "src/main.rs"

[dependencies]
# CDP Browser Automation
chromiumoxide = { version = "0.6", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "fs", "signal", "macros"] }
tokio-util = "0.7"

# CLI Parsing
clap = { version = "4", features = ["derive"] }

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP & Networking
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
url = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# OpenTelemetry Tracing
opentelemetry = "0.23"
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.16"
tracing-opentelemetry = "0.24"

# Error Handling
anyhow = "1"
thiserror = "1"

# Async Utilities
futures = "0.3"
async-trait = "0.1"
enigo = "0.6.1"

# Random & Probability
rand = "0.8"
rand_distr = "0.4"

# File & Path Utilities
tokio-stream = "0.1"
glob = "0.3"

# Image Processing
image = { version = "0.24", features = ["webp"] }
webp = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Concurrency
parking_lot = "0.12"
dashmap = "5"
sysinfo = "0.30"

# Regex
regex = "1"

# Fast HashMap
rustc-hash = "2"

# Lazy Static / Once Cell
once_cell = "1"
log = "0.4.29"
do-over = "0.1.0"

[profile.production]
inherits = "release"
opt-level = 3
lto = true                    # Full LTO for maximum optimization
codegen-units = 1             # Single codegen unit for best optimization
strip = true                  # Strip all symbols (smaller binary)
panic = "abort"               # Abort on panic (smaller, faster)
overflow-checks = false       # Disable overflow checks in release

[dev-dependencies]
env_logger = "0.11"
tempfile = "3"
wiremock = "0.6"
criterion = "0.5"


[[example]]
name = "demo-interaction-keyboard"
path = "src/task/demo-interaction-keyboard.rs"

[[example]]
name = "demo-interaction-mouse"
path = "src/task/demo-interaction-mouse.rs"

[[bench]]
name = "trajectory"
harness = false

[[bench]]
name = "accessibility_locator"
harness = false

[[bench]]
name = "predictive_scorer"
harness = false
